# git-hooks

./: .dockerignore  .gitignore  compose.yaml  package.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  workflows-bash.yml  workflows-markdown.yml  workflows-python.yml  workflows-vue.yml
config/: .isort_debug.cfg  .markdownlint-cli2.jsonc  eslint.base.mts  mypy.ini  pylintrc.toml  pylintrc_test.toml  pyproject.toml  pytest.toml
docker/: bash-git-hooks.Dockerfile  bash.Dockerfile  markdown.Dockerfile  python.Dockerfile  vue.Dockerfile
src/: bash.sh  ci.sh  filter_git_files.py  get_unittest_options.py  git_files_filter.py  helper.sh  pre-commit  py.sh  unittest_options.py
src/home/: .bashrc
tests/: test_bash.bats  test_ci.bats  test_ci_get_pythonpath_value.bats  test_ci_run_ci.bats  test_ci_run_ci_dir.bats  test_ci_run_ci_files.bats  test_ci_run_ci_files_python_test.bats  test_ci_run_ci_project.bats  test_ci_run_ci_project_eslint.bats  test_ci_run_ci_project_prettier.bats  test_ci_run_ci_project_pytest.bats  test_ci_run_ci_project_ruff.bats  test_ci_run_ci_project_vitest.bats  test_ci_run_ci_project_vue_tsc.bats  test_ci_run_ci_python_test.bats  test_helper.bats  test_pre-commit.bats  test_py.bats  test_py_set_django_env_var.bats  test_success.bats.sample
tests/py_test/: test_filter_git_files.py  test_get_unittest_options.py  test_git_files_filter.py  test_unittest_options.py
tests/sample_bash/: shellcheck_fail.sample  shfmt_fail.sample  test_fail.bats.sample
tests/sample_python/: black_fail.sample  isort_fail.sample  mypy_fail.sample  (+6 more)
(+24 files in other folders)
